--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -8,3 +8,6 @@
 @import "checkbox/checkbox";
 @import "accordion/accordion";
 @import "input/input";
+@import "map/map";
+@import "modal/modal";
+@import "modal-template/modal-template";
