--- a/src/blocks/components/card/card.scss
+++ b/src/blocks/components/card/card.scss
@@ -1,47 +1,40 @@
 .card {
+    box-sizing: border-box;
+    display: flex;
+    border: 1px solid rgba($dark, 0.05);
+    padding: 30px;
+    background-color: rgba($light, 0.25);
+    backdrop-filter: blur(5px);
     @media (max-width: $break_xl) {
         flex-direction: column;
     }
     @media (max-width: $break_md) {
         flex-direction: row;
-        gap: 20px;
         padding: 20px;
     }
     @media (max-width: $break_sm) {
-        padding: 30px;
         flex-direction: column;
         align-items: center;
+        padding: 30px;
         text-align: center;
-    }
-    display: flex;
-    padding: 30px;
-    gap: 30px;
-    background-color: rgba($light, 0.25);
-    border: 1px solid rgba($dark, 0.05);
-    box-sizing: border-box;
-    backdrop-filter: blur(5px);
-
-    &:hover &__img {
-        color: $light;
-        background-color: $alpha;
     }
 
     &__img {
-        @media (max-width: $break_md) {
-            min-width: 100px;
-            min-height: 100px;
-            max-width: 100px;
-            max-height: 100px;
-        }
-        min-width: 140px;
-        min-height: 140px;
-        max-width: 140px;
-        max-height: 140px;
         display: flex;
-        justify-content: center;
         align-items: center;
+        justify-content: center;
+        min-width: 140px;
+        max-width: 140px;
+        min-height: 140px;
+        max-height: 140px;
         background-color: $dark;
         border-radius: 50%;
+        @media (max-width: $break_md) {
+            min-width: 100px;
+            max-width: 100px;
+            min-height: 100px;
+            max-height: 100px;
+        }
         transition: {
             duration: 0.3s;
             property: color, background-color;
@@ -49,17 +42,28 @@
     }
 
     &__icon {
+        width: 55px;
         @media (max-width: $break_sm) {
             width: 40px;
         }
-        width: 55px;
     }
 
     &__info {
+        margin-left: 30px;
+        @media (max-width: $break_xl) {
+            margin-top: 30px;
+            margin-left: 0;
+        }
+        @media (max-width: $break_md) {
+            margin-top: 0;
+            margin-left: 20px;
+        }
         @media (max-width: $break_sm) {
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin-top: 20px;
+            margin-left: 0;
         }
     }
 
@@ -70,34 +74,39 @@
     }
 
     &__description {
+        margin-bottom: 20px;
+        line-height: 137%;
         @media (max-width: $break_sm) {
             margin-bottom: 15px;
             font-size: rem(13);
         }
-        margin-bottom: 20px;
-        line-height: 137%;
     }
 
     &__advantage {
+        margin-bottom: 20px;
+        color: $alpha;
         @media (max-width: $break_sm) {
             max-width: 288px;
             font-size: rem(13);
         }
-        margin-bottom: 20px;
-        color: $alpha;
     }
 
     &__footer {
         display: flex;
         align-items: center;
-        gap: 17px;
     }
 
     &__btn {
+        margin-right: 17px;
         font-size: rem(13);
     }
 
     &__link {
         font-size: rem(13);
+    }
+
+    &:hover &__img {
+        color: $light;
+        background-color: $alpha;
     }
 }
