--- a/src/blocks/components/checkbox/checkbox.pug
+++ b/src/blocks/components/checkbox/checkbox.pug
@@ -4,4 +4,4 @@ mixin checkbox({ className = false })
         span.checkbox__custom
         span.checkbox__title
             | Вы соглашаетесь с условиями обработки 
-            a.link.link_alpha.link_underline(href='javascript:;' data-custom-open='policy-modal') персональных данных
+            a.link.link_alpha.link_underline(href='javascript:;' data-custom-open='modal-policy') персональных данных
