--- a/src/blocks/components/nav/data.pug
+++ b/src/blocks/components/nav/data.pug
@@ -10,7 +10,7 @@
             title: "Услуги"
         },
         {
-            href: "about-company",
+            href: "about",
             title: "О компании"
         },
         {
@@ -18,7 +18,7 @@
             title: "Как мы работаем"
         },
         {
-            href: "advantages",
+            href: "clients",
             title: "Преимущества"
         },
         {
