--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -7,4 +7,8 @@
 @import "steps/steps";
 @import "clients/clients";
 @import "faq/faq";
+@import "request/request";
+@import "contacts/contacts";
+@import "modal-request/modal-request";
+@import "modal-policy/modal-policy";
 @import "footer/footer";
