--- a/src/blocks/modules/about/about.scss
+++ b/src/blocks/modules/about/about.scss
@@ -1,22 +1,11 @@
 .about {
+    position: relative;
+    color: $light;
     @media (max-width: $break_sm) {
         padding: {
             top: 40px;
             bottom: 89px;
         }
-    }
-    position: relative;
-    padding: {
-        top: 64px;
-        bottom: 83px;
-    }
-    color: $light;
-    background: {
-        image: url(../img/about_background.jpg);
-        color: $dark;
-        size: cover;
-        position: top center;
-        attachment: fixed;
     }
 
     &__container {
@@ -28,13 +17,13 @@
     }
 
     &__info-col {
-        @media (max-width: $break_lg) {
-            margin-bottom: 32px;
-        }
         @include col();
         @include size(8);
         @include size-xl(9);
         @include size-lg(12);
+        @media (max-width: $break_lg) {
+            margin-bottom: 32px;
+        }
     }
 
     &__header {
@@ -58,12 +47,12 @@
     }
 
     &__staff {
-        @media (max-width: $break_md) {
-            margin-bottom: 32px;
-        }
         @include col();
         @include size(4.5);
         @include size-md(12);
+        @media (max-width: $break_md) {
+            margin-bottom: 32px;
+        }
     }
 
     &__slider {
@@ -89,16 +78,16 @@
     }
 
     &__slide-info {
+        position: absolute;
+        top: 0;
+        left: 0;
+        max-width: 170px;
         @media (max-width: $break_md) {
             position: static;
         }
         @media (max-width: $break_sm) {
             position: absolute;
         }
-        position: absolute;
-        top: 0;
-        left: 0;
-        max-width: 170px;
     }
 
     &__slide-description {
@@ -117,6 +106,7 @@
     }
 
     &__slide-img {
+        margin-left: auto;
         @media (max-width: $break_md) {
             margin-left: 32px;
         }
@@ -124,7 +114,6 @@
             margin-left: auto;
             max-width: 130px;
         }
-        margin-left: auto;
     }
 
     &__slider-footer {
@@ -163,54 +152,69 @@
     }
 
     &__advantages-col {
-        @media (max-width: $break_sm) {
-            position: static;
-        }
         @include col();
         @include size(4);
         @include size-xl(3);
         @include size-lg(12);
         position: relative;
+        @media (max-width: $break_sm) {
+            position: static;
+        }
     }
 
     &__advantages {
-        @media (max-width: $break_sm) {
-            position: static;
-            flex-wrap: wrap;
-            flex-direction: row;
-            max-width: 100%;
-        }
-        position: relative;
-        z-index: 1;
         display: flex;
         flex-direction: column;
-        gap: 20px;
+        position: relative;
+        z-index: 1;
         max-width: 170px;
+        @media (max-width: $break_sm) {
+            flex-wrap: wrap;
+            flex-direction: row;
+            position: static;
+            max-width: 100%;
+        }
     }
 
     &__advantage {
+        margin-bottom: 20px;
         @media (max-width: $break_sm) {
             max-width: 170px;
+        }
+
+        &:last-child {
+            margin-bottom: 0;
         }
     }
 
     &__map {
-        @media (max-width: $break_xl) {
-            left: auto;
-            right: -10px;
-        }
-        @media (max-width: $break_md) {
-            max-width: calc(100%);
-        }
-        @media (max-width: $break_sm) {
-            bottom: 4px;
-            left: 0;
-            right: auto;
-        }
         position: absolute;
         bottom: -53px;
         left: -77px;
         user-select: none;
         pointer-events: none;
+        @media (max-width: $break_xl) {
+            right: -10px;
+            left: auto;
+        }
+        @media (max-width: $break_md) {
+            max-width: calc(100%);
+        }
+        @media (max-width: $break_sm) {
+            right: auto;
+            bottom: 4px;
+            left: 0;
+        }
+    }
+    padding: {
+        top: 64px;
+        bottom: 83px;
+    }
+    background: {
+        image: url(../img/about_background.jpg);
+        color: $dark;
+        size: cover;
+        position: top center;
+        attachment: fixed;
     }
 }
