--- a/src/blocks/modules/services/data.pug
+++ b/src/blocks/modules/services/data.pug
@@ -4,24 +4,96 @@
             iconName: "services_labaratory",
             title: "Проведение испытаний продукции", 
             description: "Испытательная лаборатория (ИЛ)",
-            advantage: "В результате клиент получает протокол испытаний."
+            advantage: "В результате клиент получает протокол испытаний.",
+
+            slides: [
+                {
+                    title: "Достоверность результатов",
+                    description: "Текст, который кратко раскрывает имменно это преимущество компании, преполагаемо в три строки.",
+                    imgName: "contacts_slider-1"
+                },
+                {
+                    title: "Достоверность результатов",
+                    description: "Текст, который кратко раскрывает имменно это преимущество компании, преполагаемо в три строки.",
+                    imgName: "contacts_slider-1"
+                },
+                {
+                    title: "Достоверность результатов",
+                    description: "Текст, который кратко раскрывает имменно это преимущество компании, преполагаемо в три строки.",
+                    imgName: "contacts_slider-1"
+                },
+            ]
         },
         {
             iconName: "services_checklist",
             title: "Подтверждение соответствия продукции установленным требованиям", 
             description: "Орган по подтверждению соответствия (ОПС)",
-            advantage: "В результате ОПС выдает сертификаты соответствия продукции."
+            advantage: "В результате ОПС выдает сертификаты соответствия продукции.",
+
+            slides: [
+                {
+                    title: "Достоверность результатов",
+                    description: "Текст, который кратко раскрывает имменно это преимущество компании, преполагаемо в три строки.",
+                    imgName: "contacts_slider-1"
+                },
+                {
+                    title: "Достоверность результатов",
+                    description: "Текст, который кратко раскрывает имменно это преимущество компании, преполагаемо в три строки.",
+                    imgName: "contacts_slider-1"
+                },
+                {
+                    title: "Достоверность результатов",
+                    description: "Текст, который кратко раскрывает имменно это преимущество компании, преполагаемо в три строки.",
+                    imgName: "contacts_slider-1"
+                },
+            ]
         },
         {
             iconName: "services_certificate",
             title: "Работы в области стандартизации", 
             description: "Отдел стандартизации (ОС)",
-            advantage: "В результате клиент получает нормативный документ "
+            advantage: "В результате клиент получает нормативный документ ",
+
+            slides: [
+                {
+                    title: "Достоверность результатов",
+                    description: "Текст, который кратко раскрывает имменно это преимущество компании, преполагаемо в три строки.",
+                    imgName: "contacts_slider-1"
+                },
+                {
+                    title: "Достоверность результатов",
+                    description: "Текст, который кратко раскрывает имменно это преимущество компании, преполагаемо в три строки.",
+                    imgName: "contacts_slider-1"
+                },
+                {
+                    title: "Достоверность результатов",
+                    description: "Текст, который кратко раскрывает имменно это преимущество компании, преполагаемо в три строки.",
+                    imgName: "contacts_slider-1"
+                },
+            ]
         },
         {
             iconName: "services_microscope",
             title: "Проведение научно-исследовательских работ", 
             description: "Отдел науки (ОН)",
-            advantage: "Результатом является отчет по научно-исследовательской работе"
+            advantage: "Результатом является отчет по научно-исследовательской работе",
+
+            slides: [
+                {
+                    title: "Достоверность результатов",
+                    description: "Текст, который кратко раскрывает имменно это преимущество компании, преполагаемо в три строки.",
+                    imgName: "contacts_slider-1"
+                },
+                {
+                    title: "Достоверность результатов",
+                    description: "Текст, который кратко раскрывает имменно это преимущество компании, преполагаемо в три строки.",
+                    imgName: "contacts_slider-1"
+                },
+                {
+                    title: "Достоверность результатов",
+                    description: "Текст, который кратко раскрывает имменно это преимущество компании, преполагаемо в три строки.",
+                    imgName: "contacts_slider-1"
+                },
+            ]
         },
     ];
