--- a/src/blocks/pages/index/index.pug
+++ b/src/blocks/pages/index/index.pug
@@ -7,6 +7,13 @@ mixin index({ className = false })
     include ../../modules/steps/steps
     include ../../modules/clients/clients
     include ../../modules/faq/faq
+    include ../../modules/request/request
+    include ../../modules/contacts/contacts
+    include ../../modules/modal-request/modal-request
+    include ../../modules/modal-call/modal-call
+    include ../../modules/modal-policy/modal-policy
+    include ../../modules/modal-about/modal-about
+    include ../../modules/modal-services/modal-services
     
     +intro({})
     +services({})
@@ -16,3 +23,10 @@ mixin index({ className = false })
     +steps({})
     +clients({})
     +faq({})
+    +request({})
+    +contacts({})
+    +modal-request({})
+    +modal-call({})
+    +modal-policy({})
+    +modal-about({})
+    +modal-services({})
