--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -60,7 +60,7 @@ html(lang="ru")
 		link(rel="apple-touch-icon" sizes="1024x1024" href="img/favicons/apple-touch-icon-1024x1024.png")
 		link(rel="stylesheet" href="styles/main.css")
 	body
-		.page-wrapper
+		.page-wrapper(id="home")
 			+header({})
 			main.main
 				block content
