--- a/src/blocks/modules/steps/steps.scss
+++ b/src/blocks/modules/steps/steps.scss
@@ -1,4 +1,5 @@
 .steps {
+    overflow: hidden;
     @media (max-width: $break_xl) {
         background: {
             size: auto calc(100% - 30px);
@@ -12,22 +13,11 @@
         }
     }
     @media (max-width: $break_sm) {
+        text-align: center;
         padding: {
             top: 41px;
             bottom: 47px;
         }
-        text-align: center;
-    }
-    padding: {
-        top: 41px;
-        bottom: 25px;
-    }
-    background: {
-        color: $alpha-light;
-        image: url(../img/consultation_backgroung.svg);
-        repeat: no-repeat;
-        size: 668px 591px;
-        position: calc(100% - 97px) -72px;
     }
 
     &__container {
@@ -35,10 +25,10 @@
     }
 
     &__header {
+        margin-bottom: 12px;
         @media (max-width: $break_sm) {
             margin-bottom: 25px;
         }
-        margin-bottom: 12px;
     }
 
     &__title {
@@ -53,37 +43,60 @@
     }
 
     &__list {
-        @media (max-width: $break_lg) {
-            gap: $offset;
-        }
         display: flex;
         flex-wrap: wrap;
-        gap: 30px 80px;
         counter-reset: step;
+        margin-left: -40px;
+        margin-right: -40px;
+        @media (max-width: $break_xl) {
+            margin-left: $offset * -1;
+            margin-right: $offset * -1;
+        }
     }
 
     &__item {
-        @media (max-width: $break_lg) {
-            flex-basis: calc(33.33% - #{$offset});
+        flex-basis: calc(20% - 80px);
+        margin-left: 40px;
+        margin-right: 40px;
+        @media (max-width: $break_xl) {
+            flex-basis: calc(33.33% - #{$offset} * 2);
+            margin-left: $offset;
+            margin-right: $offset;
+            margin-top: 30px;
+
+            &:nth-child(1), &:nth-child(2), &:nth-child(3) {
+                margin-top: 0;
+            }
         }
         @media (max-width: $break_md) {
-            flex-basis: calc(50% - #{$offset});
+            flex-basis: calc(50% - #{$offset} * 2);
+
+            &, &:nth-child(3) {
+                margin-top: 30px;
+            }
+
+            &:nth-child(1), &:nth-child(2) {
+                margin-top: 0;
+            }
         }
         @media (max-width: $break_sm) {
             flex-basis: 100%;
+
+            &:nth-child(2) {
+                margin-top: 30px;
+            }
         }
-        flex-basis: calc(20% - 80px);
     }
 
     &__counter {
-        @media (max-width: $break_sm) {
-            justify-content: center;
-            margin-bottom: 12px;
-        }
         display: flex;
         align-items: flex-end;
         margin-bottom: 20px;
         line-height: 198%;
+        @media (max-width: $break_sm) {
+            justify-content: center;
+            margin-bottom: 12px;
+        }
 
         &:before {
             counter-increment: step;
@@ -96,7 +109,7 @@
     }
 
     &__icon {
-        max-width: 50px;
+        width: 50px;
         margin-left: 15px;
     }
 
@@ -108,5 +121,16 @@
     &__item-description {
         @include p-sm();
         line-height: 154%;
+    }
+    padding: {
+        top: 41px;
+        bottom: 25px;
+    }
+    background: {
+        color: $alpha-light;
+        image: url(../img/consultation_backgroung.svg);
+        repeat: no-repeat;
+        size: 668px 591px;
+        position: calc(100% - 97px) -72px;
     }
 }
