--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -8,4 +8,6 @@ $beta: rgb(185, 7, 7);
 $dark: #212121;
 $light: #fff;
 $gamma: #f4f4f4;
+$gamma-normal: #a2a2a2;
 $gamma-dark: #d9d9d9;
+$gamma-darker: #4d4d4d;
